# kosmic-lab

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CROSS_TRACK_ANALYSIS.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  ETHICS.md  FAQ.md  FINAL_SESSION_SUMMARY_2025_11_09.md  FINAL_STATUS_AND_NEXT_STEPS.md  GOVERNANCE.md  IMPROVEMENTS.md  KOSMIC_LAB_SESSION_2025_11_09_COMPLETE.md  K_CODEX_COMPLETE_MIGRATION_SUMMARY.md  K_CODEX_MIGRATION.md  K_CODEX_MIGRATION_COMPLETE.md  K_CODEX_PHASE2_EXTENSIONS_COMPLETE.md  Makefile  NEXT_STEPS.md  PAPER_3_COLLECTIVE_COHERENCE_DRAFT.md  PAPER_4_DEVELOPMENTAL_LEARNING_DRAFT.md  PAPER_5_SURGICAL_FIXES_PLAN.md  PAPER_5_UNIFIED_THEORY_OUTLINE.md  PHASE_10_SUMMARY.md  PHASE_11_SUMMARY.md  PHASE_12_SUMMARY.md  PHASE_13_PLAN.md  PHASE_14_PLAN.md  PHASE_15_PLAN.md  (+51 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  experiment_result.md  feature_request.md  feature_request.yml  question.yml
.github/workflows/: ci.yml  greetings.yml  performance.yml  stale.yml
archives/track_g_bundle_20251113_171148/: metadata.json
archives/track_g_bundle_20251113_171420/: metadata.json
archives/track_g_bundle_20251113_181904/: metadata.json
archives/track_g_bundle_20251113_182402/: metadata.json
archives/track_g_bundle_20251113_183444/: log.jsonl  metadata.json
archives/track_g_bundle_20251113_183706/: metadata.json
archives/track_g_bundle_20251113_231403/: metadata.json
archives/track_g_bundle_20251113_231758/: metadata.json
archives/track_g_bundle_20251113_231950/: metadata.json
archives/track_g_bundle_20251113_234115/: metadata.json
archives/track_g_bundle_20251114_065948/: metadata.json
archives/track_g_bundle_20251114_070350/: metadata.json
archives/track_g_bundle_20251114_070548/: metadata.json
archives/track_g_bundle_20251114_072719/: metadata.json
archives/track_g_bundle_20251114_073055/: metadata.json
archives/track_g_bundle_20251114_073514/: metadata.json
archives/track_g_bundle_20251114_074105/: metadata.json
archives/track_g_bundle_20251114_074257/: ckpt.json  metadata.json
archives/track_g_bundle_20251114_074354/: metadata.json
archives/track_g_bundle_20251114_074615/: metadata.json
archives/track_g_bundle_20251114_074810/: metadata.json
archives/track_g_bundle_20251114_074900/: metadata.json
archives/track_g_bundle_20251114_075229/: config_snapshot.yaml  metadata.json
archives/track_g_bundle_20251114_075312/: metadata.json
archives/track_g_bundle_20251114_130331/: config_hash.txt  metadata.json
benchmarks/: README.md  run_benchmarks.py  suite.py
configs/: phase4_experiment.yaml  track_c_no_k_ablation.yaml  track_c_rescue.yaml  track_c_sac.yaml
core/: README.md  __init__.py  bioelectric.py  central_critic.py  config.py  kcodex.py  kpass.py  logging_config.py  parallel.py  phase4_actor.py  reciprocity_coupling.py  shared_buffer.py  te_bridge.py  utils.py
core/visualization/: __init__.py  k_index_plots.py  publication.py  utils.py
docs/: FEATURES.md  GLOSSARY.md  Makefile  PERFORMANCE_GUIDE.md  README.md  conf.py  index.rst
docs/api/: core.rst  fre.rst  index.rst  scripts.rst
docs/development/: EXPERIMENT_STATUS_REPORT.md  FINAL_PROGRESS_REPORT_NOV_11_2025.md  GREEN_LIGHT_KIT.md  (+5 more)
examples/: 01_hello_kosmic.py  02_advanced_k_index.py  03_multi_universe.py  04_bioelectric_rescue.py  05_neuroscience_eeg_analysis.py  06_ai_model_coherence.py  07_quantum_observer_effects.py  README.md  interactive_tutorial.ipynb  track_c_knowledge_graph_example.py
experiments/: __init__.py
fre/: __init__.py  analyze.py  analyze_track_f.py  controller_sac.py  corridor.py  detailed_logging_patch.py  multi_universe.py  phase4_coordinator.py  rescue.py  run.py  run_scaling.py  sac_env.py  sac_evaluate.py  sac_train.py  simulate.py  te_audit.py  track_a_gate.py  track_b_runner.py  track_c_runner.py  track_d_parameter_sweep.py  track_d_runner.py  track_e_runner.py  track_f_runner.py  track_g_runner.py  track_g_runner_backup.py  track_h_runner.py  train_phase4.py  universe.py
historical_k/: __init__.py  analysis_modern.py  comparison.py  compute_k.py  contributions.py  etl.py  k_config.yaml  report.py
holochain/: README.md  __init__.py
holochain/tests/: Cargo.toml  README.md  run_sandbox.sh
holochain/tests/sandbox_workdir/: bundle.dna  happ.yaml
holochain/tests/src/: lib.rs
holochain/tests/tests/: integration.rs
kosmic_lab/: __init__.py  __main__.py
manuscript/: README.md
papers/: FINAL_SUBMISSION_STATUS.md
schemas/: archive_metadata.schema.json  experiment_config.schema.json  k_codex.json  k_passport.json  kcodex.schema.json
scripts/: README.md  ai_experiment_designer.py  analyze_track_b.py  archive_tool.py  bash_completion.sh  build_docs.py  check_code_quality.sh  checkpoint_tool.py  config_registry.py  contribution_stats.py  generate_analysis_notebook.py  health_check.py  holochain_bridge.py  kosmic_dashboard.py  log_tool.py  plot_sac_training.py  plot_track_b_diagnostics.py  profile_performance.py  run_all_examples.py  setup_dev_env.sh  validate_installation.sh  validate_registry.py  zsh_completion.zsh
templates/: README.md  experiment_template.py
tests/: __init__.py  conftest.py  test_archive_tool.py  test_bioelectric.py  test_central_critic.py  test_config.py  test_config_registry.py  test_configs_have_warm_start.py  test_controller_sac.py  test_corridor.py  test_fgsm.py  test_fre_simulate.py  test_historical_compute.py  test_historical_normalization.py  test_holochain_integration.py  test_integration_end_to_end.py  test_integration_fre.py  test_k_index.py  test_kpassport.py  test_log_tool.py  test_logging_config.py  test_multi_universe.py  test_property_based.py  test_reciprocity_coupling.py  test_rescue.py  test_shared_buffer.py  test_te_bridge.py  test_track_b_runner.py  test_track_g_runner.py  test_utils.py
track_b_analyses/: README.md
(+181 files in other folders)
