[project]
name = "kosmic-lab"
version = "0.1.0"
description = "Unified research platform for the Kosmic Simulation & Coherence Framework."
authors = [{name = "Kosmic Lab Team", email = "kosmic-lab@example.org"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["coherence", "consciousness", "simulation", "reciprocity", "k-index", "bioelectric", "fep"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Luminous-Dynamics/kosmic-lab"
Documentation = "https://kosmic-lab.readthedocs.io"
Repository = "https://github.com/Luminous-Dynamics/kosmic-lab"
Issues = "https://github.com/Luminous-Dynamics/kosmic-lab/issues"
Changelog = "https://github.com/Luminous-Dynamics/kosmic-lab/blob/main/CHANGELOG.md"

[tool.poetry]
name = "kosmic-lab"
version = "0.1.0"
description = "Unified research platform for the Kosmic Simulation & Coherence Framework."
authors = ["Kosmic Lab Team <kosmic-lab@example.org>"]
packages = [
    { include = "core" },
    { include = "fre" },
    { include = "historical_k" },
    { include = "experiments" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.1"
networkx = "^3.1"
tqdm = "^4.66"
pyyaml = "^6.0"
jsonschema = "^4.19"
gymnasium = "^0.29"
stable-baselines3 = {version = "^2.2", extras = ["torch"] }
matplotlib = "^3.8"
scikit-learn = "^1.5"
scipy = "^1.12"
seaborn = "^0.13"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-xdist = "^3.5"
hypothesis = "^6.92"
pre-commit = "^3.6"
mypy = "^1.7"
black = "^23.12"
isort = "^5.13"
flake8 = "^7.0"
bandit = "^1.7"
sphinx = "^7.2"
sphinx-rtd-theme = "^2.0"
jupyter = "^1.0"
nbconvert = "^7.14"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | holochain
  | docs/_build
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "venv", "holochain", "docs/_build"]
src_paths = ["core", "fre", "historical_k", "scripts", "tests", "benchmarks", "examples"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "networkx.*",
    "gymnasium.*",
    "stable_baselines3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=core",
    "--cov=fre",
    "--cov=historical_k",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_gpu: marks tests that require GPU",
    "network: marks tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["core", "fre", "historical_k"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/holochain/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
