[package]
name = "kosmic-holochain-tests"
version = "0.1.0"
edition = "2021"

[features]
default = ["holochain-stack"]
holochain-stack = [
  "holochain_client",
  "holochain_cli_sandbox",
  "holochain_zome_types",
]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "process", "rt-multi-thread", "time"] }
holo_hash = "0.6.0-dev.18"
holochain_serialized_bytes = "0.0.56"

[dependencies.holochain_client]
version = "0.8.0-dev.30"
optional = true

[dependencies.holochain_cli_sandbox]
version = "0.6.0-dev.33"
optional = true

[dependencies.holochain_zome_types]
version = "0.6.0-dev.24"
optional = true
